# lyrics

./: README.md  pyproject.toml  requirements.txt  setup.py
lyric_whisper/: main.py
lyric_whisper/model/: whisper.py
