[project]
name = "lyrics_whisper"
version = "0.0.1"
description = "A small package to convert lyric with whisper"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/WaveGenAI/lyrics.git"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}